# rust-candidate-tasks

./: .gitignore  README.md
contract_event_listener/: Cargo.toml  event_log.txt  storage.abi.json
contract_event_listener/src/: main.rs
merkle_tree/: Cargo.toml
merkle_tree/src/: lib.rs  main.rs
merkle_tree_eth/: Cargo.toml
merkle_tree_eth/src/: lib.rs  main.rs
print_incoming_tx/: Cargo.toml
print_incoming_tx/src/: main.rs
serialization_benchmark/: Cargo.toml  benchmark_result.txt  build.rs
serialization_benchmark/proto/: test.proto
serialization_benchmark/src/: main.rs
simple_client/: Cargo.toml
simple_client/src/: file.rs  main.rs
simulate_distributed_client/: Cargo.toml  keys.json
simulate_distributed_client/src/: keys.rs  main.rs
tic_tac_toe/: Cargo.toml
tic_tac_toe/src/: custom_types.rs  main.rs  server.rs
web3_eth_wallet/: Cargo.toml  wallet.json
web3_eth_wallet/src/: main.rs
