[package]
name = "serialization_benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
bcs = "0.1.6"
bincode = { version = "2.0.1", features = ["serde"] }
borsh = { version = "1.5.7", features = ["derive"] }
protobuf = "3.7.2"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
rmp-serde = "1.3.0"
rkyv = { version = "0.8.10", features = ["std", "alloc", "bytecheck", ] }

[build-dependencies]
protobuf-codegen = "3.7.2"
