[package]
name = "simple"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.38"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt", "time"] }
tokio-tungstenite = { version = "0.26.2" , features = ["native-tls"] }
