[package]
name = "simulate_distributed_client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = { version = "0.8" }
hex = "0.4"
